--- a/main.html
+++ b/main.html
@@ -4,8 +4,27 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Radar control site</title>
-</head>
+    <link rel="stylesheet" href="styl.css">
+    <script type="text/javascript" src="main.js"></script>
 <body>
+    <div class="page">
+        <div class="Header">
+            <img id="logo" src="lg1.png" alt="piccolo_b">
+            <p id="name">PICCOLO_B</p>
+            <p id="slogan">The future is us</p>
+            <button id="signup" type="button">sign up</button>
+            <p id="or">or</p>
+            <button id="login" type="button">log in </button>
+        </div>
+        <div class="Preview">
+            <img id="img1" src="Koiniggsegg-one-one.jpg"alt="">
+
+        </div>
+        <div class="content">
+            
+        </div>
+
+    </div>
     
 </body>
 </html>
