--- a/main.html
+++ b/main.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Radar control site</title>
     <link rel="stylesheet" href="styl.css">
-    <script type="text/javascript" src="main.js"></script>
+ </head> 
 <body>
     <div class="page">
         <div class="Header">
@@ -25,6 +25,8 @@
         </div>
 
     </div>
+
+    <script src="main.js"></script>
     
 </body>
 </html>
